--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         />
         <!-- Ícones das Redes Sociais -->
         <div class="d-flex">
-          <a class="navbar-brand d-flex align-items-center" href="#">
+          <a class="navbar-brand d-flex align-items-center" href="https://www.linkedin.com/in/jeanoliveira-dev/" target="_blank">
             <img
               src="image/linkedin.png"
               alt="LinkedIn"
@@ -37,7 +37,7 @@
               class="d-inline-block align-text-center mr-2"
             />
           </a>
-          <a class="navbar-brand d-flex align-items-center" href="#">
+          <a class="navbar-brand d-flex align-items-center" href="https://github.com/Jeanpk12" target="_blank">
             <img
               src="image/github-sign.png"
               alt="GitHub"
